trustfall_core/test_data/tests/parse_errors/variable_in_root_query.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"{
  query Number($max: Int!) {
    num: $max @output
  }
}"#,
    arguments: {
        "max": Int64(3)
    },
)
